# VectorDB

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/httpserver/: CMakeLists.txt  http_server.cpp
src/include/common/: constants.h
src/include/httpserver/: http_server.h
src/include/index/: faiss_index.h  hnswlib_index.h  index_factory.h
src/include/logger/: logger.h
src/index/: CMakeLists.txt  faiss_index.cpp  hnswlib_index.cpp  index_factory.cpp
src/logger/: CMakeLists.txt  logger.cpp
src/scripts/: curl.sh
src/test/: CMakeLists.txt
src/vdbserver/: CMakeLists.txt  vdb_server.cpp
test/: FaissDB.cpp  FaissDB.h  faiss-demo.cpp  faiss.index
third_library/: CMakeLists.txt
